--- a/signup.html
+++ b/signup.html
@@ -78,7 +78,7 @@
               </div>
               <button type="submit" class="btn btn-primary btn-block" onclick="signup()">Signup</button>
               <div class="mt-3 text-center">
-                <span>Already have an account? </span><a href="./login.html" class="btn btn-link">Login</a>
+                <span>Already have an account? </span><a href="./index.html" class="btn btn-link">Login</a>
               </div>
             </form>
 
